--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -49,11 +49,11 @@ changelog:
 brews:
   - name: jwt-decoder
     repository:
-      owner: ckumar3
+      owner: ckumar392
       name: homebrew-tap
       token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
     directory: Formula
-    homepage: "https://github.com/ckumar3/jwt-decoder"
+    homepage: "https://github.com/ckumar392/jwt-decoder"
     description: "CLI tool to decode and display JWT tokens in a formatted manner"
     license: "MIT"
     test: |
